--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@
       transform: translate(-50%, -50%);
       color: white;
       font-weight: bold;
-      font-family: "Lilita One", serif;
+      font-family: "Sigmar";
       font-weight: 400;
-      font-style: normal;
+      font-style: bold;
       
     }
     
