--- a/style.css
+++ b/style.css
@@ -4,19 +4,22 @@
     .main{
       width:70%;
       margin: 0 auto;
-      background: red;
+      background: white;
     }
     
     nav{
+      color: white;
       display: flex;
       justify-content: space-around;
       top: 0;
       position: sticky;
-      background-color: white;
-      font-family: "Lilita One", serif;
+      background-color: #78140d;
+      font-family: "Arial", sans-serif;
       font-weight: 400;
       font-style: normal; 
-      
+      z-index: 2;
+      font-size: 15px;
+      color: white;
     }
     
     .splash{width:100%}
@@ -25,10 +28,12 @@
       font-family: "Lilita One", serif;
       font-weight: 400;
       font-style: normal;
-      color: white;
+      color: black;
     }
 
-    .small{font-size: 1vw; }
+    .small{font-size: 1vw; 
+      font-family: "Arial", sans-serif;
+    }
     
     .products{
       display: flex;
@@ -78,12 +83,12 @@
     }
     
     button {
-        background-color: darkred;
-        color: white;
+        background-color: white;
+        color: black;
         border: none;
         border-radius: 1px;
         cursor: pointer;
-        font-family: "Lilita One", serif;
+        font-family: "Arial", serif;
         font-weight: 400;
         font-style: normal;
     }
@@ -106,10 +111,11 @@
         display: flex;
         justify-content: space-around;
         bottom: 0;
-        background-color: white;
-        font-family: "Lilita One", serif;
+        background-color: #78140d;
+        font-family: "Arial", sans-serif;
         font-weight: 400;
         font-style: normal;
+        font-size: 15px;
         
        
       }
